# socio

./: .gitignore  Cargo.toml  README.md
examples/actix/: Cargo.toml
examples/actix/src/: main.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/facebook/: Cargo.toml
examples/facebook/src/: main.rs
examples/google/: Cargo.toml
examples/google/src/: main.rs
examples/microsoft/: Cargo.toml
examples/microsoft/src/: main.rs
examples/multi/: Cargo.toml
examples/multi/src/: main.rs
examples/rocket/: Cargo.toml
examples/rocket/src/: main.rs
examples/shared/: Cargo.toml
examples/shared/src/: lib.rs
socio/: Cargo.toml
socio/src/: error.rs  integrations.rs  jwt.rs  lib.rs  providers.rs  types.rs
socio/src/integrations/: actix.rs  axum.rs  mod.rs  rocket.rs
socio_providers/: Cargo.toml
socio_providers/src/: facebook.rs  google.rs  lib.rs  microsoft.rs  openid.rs
