[workspace]
members = ["socio", "socio_providers", "examples/*"]
default-members = ["socio"]
resolver = "2"

[workspace.package]
homepage = "https://github.com/m-haisham/socio"
repository = "https://github.com/m-haisham/socio"
license = "MIT"
edition = "2024"
readme = "README.md"
keywords = ["social", "login", "oauth", "authentication", "identity"]
categories = ["authentication", "web-programming"]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
jsonwebtoken = "9.3.1"
url = "2.5.4"
