[package]
name = "socio"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
http = "1.2.0"
oauth2 = "5.0.0"
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }

jsonwebtoken = { workspace = true, optional = true }
axum-core = { version = "^0.5", optional = true }
rocket = { version = "^0.5", optional = true }

[features]
default = ["jwt"]
axum = ["dep:axum-core"]
jwt = ["dep:jsonwebtoken"]
rocket = ["dep:rocket"]
