[package]
name = "socio"
description = "Social login integration for web frameworks"
version = "0.1.3"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
async-trait = "0.1.86"
http = "1.2.0"
oauth2 = "5.0.0"
reqwest = { version = "^0.12", features = ["json"], default-features = false }
serde.workspace = true
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }

jsonwebtoken = { workspace = true, optional = true }
axum-core = { version = "^0.5", optional = true }
rocket = { version = "^0.5", optional = true }
actix-web = { version = "^4.0", optional = true }

[features]
default = ["jwt", "rustls-tls"]
axum = ["dep:axum-core"]
jwt = ["dep:jsonwebtoken"]
rocket = ["dep:rocket"]
actix = ["dep:actix-web"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
