[package]
name = "socio_providers"
description = "Social login providers for socio"
version = "0.1.0"
homepage.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
socio = { path = "../socio" }
serde.workspace = true
jsonwebtoken.workspace = true
serde_json = "1.0.138"
url.workspace = true
url-macro = "0.1.12"
