[package]
name = "socio_providers"
description = "Social login providers for socio"
version = "0.1.1"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
socio = { version = "^0.1", path = "../socio", features = ["axum"] }
serde.workspace = true
jsonwebtoken.workspace = true
serde_json = "1.0.138"
url.workspace = true
url-macro = "0.1.12"
