[package]
name = "example-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
serde = "1.0.217"
serde_json = "1.0.138"
socio = { path = "../../socio", features = ["axum"] }
shared = { path = "../shared" }
